project1/deploy-svc-bar.yml
---
kind: Service 
apiVersion: v1 
metadata: 
  name: bar-svc
spec: 
  # type: ClusterIP 
  # clusterIP: 10.233.10.10
  selector: 
    app: bar-app 
  ports:
  - port: 8080
    targetPort: 8080 

---
kind: Deployment 
apiVersion: apps/v1 
metadata: 
  name: bar-deploy
spec: 
  replicas: 2
  selector: 
    matchLabels: 
      app: bar-app 
  template: 
    metadata:
      name: bar-pod 
      labels: 
        app: bar-app
    spec:
      containers: 
      - name: bar-container 
        image: whatwant/node-web:2.0
        ports: 
        - containerPort: 8080
