project1/deploy-svc-foo.yml
---
kind: Service 
apiVersion: v1 
metadata: 
  name: foo-svc
spec: 
  # type: ClusterIP 
  # clusterIP: 10.233.10.10
  selector: 
    app: foo-app 
  ports:
  - port: 4200
    targetPort: 8080 

---
kind: Deployment 
apiVersion: apps/v1 
metadata: 
  name: foo-deploy
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: foo-app
  template: 
    metadata:
      name: foo-pod 
      labels: 
        app: foo-app
    spec:
      containers: 
      - name: foo-container 
        image: whatwant/node-web:2.0
        ports: 
        - containerPort: 8080
